kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: veterinaria
  labels:
    name: veterinaria
