kubernetes/veterinaria-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veterinaria-app
  namespace: veterinaria
  labels:
    app: veterinaria-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: veterinaria-app
  template:
    metadata:
      labels:
        app: veterinaria-app
    spec:
      containers:
      - name: veterinaria-app
        image: docker.io/andrepereira21/vetpython:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
