kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veterinaria-ingress
  namespace: veterinaria
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: ubuntu-master.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: veterinaria-service
            port:
              number: 80
